@@ -19,7 +19,7 @@
 
 package org.elasticsearch.gradle.test;
 
-import org.elasticsearch.gradle.BwcVersions;
+import org.elasticsearch.gradle.Architecture;
 import org.elasticsearch.gradle.DistributionDownloadPlugin;
 import org.elasticsearch.gradle.ElasticsearchDistribution;
 import org.elasticsearch.gradle.ElasticsearchDistribution.Flavor;
@@ -27,123 +27,177 @@ import org.elasticsearch.gradle.ElasticsearchDistribution.Platform;
 import org.elasticsearch.gradle.ElasticsearchDistribution.Type;
 import org.elasticsearch.gradle.Jdk;
 import org.elasticsearch.gradle.JdkDownloadPlugin;
-import org.elasticsearch.gradle.OS;
+import org.elasticsearch.gradle.SystemPropertyCommandLineArgumentProvider;
 import org.elasticsearch.gradle.Version;
 import org.elasticsearch.gradle.VersionProperties;
+import org.elasticsearch.gradle.docker.DockerSupportPlugin;
+import org.elasticsearch.gradle.docker.DockerSupportService;
 import org.elasticsearch.gradle.info.BuildParams;
-import org.elasticsearch.gradle.vagrant.BatsProgressLogger;
+import org.elasticsearch.gradle.internal.InternalDistributionDownloadPlugin;
+import org.elasticsearch.gradle.util.GradleUtils;
+import org.elasticsearch.gradle.util.Util;
 import org.elasticsearch.gradle.vagrant.VagrantBasePlugin;
 import org.elasticsearch.gradle.vagrant.VagrantExtension;
-import org.gradle.api.GradleException;
+import org.gradle.api.Action;
 import org.gradle.api.NamedDomainObjectContainer;
 import org.gradle.api.Plugin;
 import org.gradle.api.Project;
 import org.gradle.api.Task;
 import org.gradle.api.artifacts.Configuration;
-import org.gradle.api.file.Directory;
-import org.gradle.api.logging.Logger;
-import org.gradle.api.logging.Logging;
-import org.gradle.api.plugins.ExtraPropertiesExtension;
+import org.gradle.api.artifacts.dsl.DependencyHandler;
 import org.gradle.api.plugins.JavaBasePlugin;
 import org.gradle.api.provider.Provider;
+import org.gradle.api.specs.Specs;
 import org.gradle.api.tasks.Copy;
-import org.gradle.api.tasks.TaskInputs;
 import org.gradle.api.tasks.TaskProvider;
 import org.gradle.api.tasks.testing.Test;
 
-import java.io.IOException;
-import java.io.UncheckedIOException;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.Paths;
+import java.io.File;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
-import java.util.Random;
-import java.util.stream.Collectors;
+import java.util.function.Supplier;
 import java.util.stream.Stream;
 
 import static org.elasticsearch.gradle.vagrant.VagrantMachine.convertLinuxPath;
 import static org.elasticsearch.gradle.vagrant.VagrantMachine.convertWindowsPath;
 
 public class DistroTestPlugin implements Plugin<Project> {
-    private static final Logger logger = Logging.getLogger(DistroTestPlugin.class);
-
     private static final String SYSTEM_JDK_VERSION = "11.0.2+9";
     private static final String SYSTEM_JDK_VENDOR = "openjdk";
-    private static final String GRADLE_JDK_VERSION = "13.0.1+9@cec27d702aa74d5a8630c65ae61e4305";
+    private static final String GRADLE_JDK_VERSION = "14+36@076bab302c7b4508975440c56f6cc26a";
     private static final String GRADLE_JDK_VENDOR = "openjdk";
 
     // all distributions used by distro tests. this is temporary until tests are per distribution
-    private static final String DISTRIBUTIONS_CONFIGURATION = "distributions";
-    private static final String UPGRADE_CONFIGURATION = "upgradeDistributions";
-    private static final String PLUGINS_CONFIGURATION = "packagingPlugins";
-    private static final String COPY_DISTRIBUTIONS_TASK = "copyDistributions";
-    private static final String COPY_UPGRADE_TASK = "copyUpgradePackages";
-    private static final String COPY_PLUGINS_TASK = "copyPlugins";
+    private static final String EXAMPLE_PLUGIN_CONFIGURATION = "examplePlugin";
     private static final String IN_VM_SYSPROP = "tests.inVM";
     private static final String DISTRIBUTION_SYSPROP = "tests.distribution";
+    private static final String BWC_DISTRIBUTION_SYSPROP = "tests.bwc-distribution";
+    private static final String EXAMPLE_PLUGIN_SYSPROP = "tests.example-plugin";
 
     @Override
     public void apply(Project project) {
-        final boolean runDockerTests = shouldRunDockerTests(project);
-
-        project.getPluginManager().apply(DistributionDownloadPlugin.class);
+        project.getRootProject().getPluginManager().apply(DockerSupportPlugin.class);
+        project.getPlugins().apply(InternalDistributionDownloadPlugin.class);
+        project.getPlugins().apply(JdkDownloadPlugin.class);
         project.getPluginManager().apply("elasticsearch.build");
+
+        Provider<DockerSupportService> dockerSupport = GradleUtils.getBuildService(
+            project.getGradle().getSharedServices(),
+            DockerSupportPlugin.DOCKER_SUPPORT_SERVICE_NAME
+        );
 
         // TODO: it would be useful to also have the SYSTEM_JAVA_HOME setup in the root project, so that running from GCP only needs
         // a java for gradle to run, and the tests are self sufficient and consistent with the java they use
+        NamedDomainObjectContainer<ElasticsearchDistribution> allDistributions = DistributionDownloadPlugin.getContainer(project);
+        List<ElasticsearchDistribution> testDistributions = configureDistributions(project);
 
-        Version upgradeVersion = getUpgradeVersion(project);
-        Provider<Directory> distributionsDir = project.getLayout().getBuildDirectory().dir("packaging/distributions");
-        Provider<Directory> upgradeDir = project.getLayout().getBuildDirectory().dir("packaging/upgrade");
-        Provider<Directory> pluginsDir = project.getLayout().getBuildDirectory().dir("packaging/plugins");
-
-        List<ElasticsearchDistribution> distributions = configureDistributions(project, upgradeVersion, runDockerTests);
-        TaskProvider<Copy> copyDistributionsTask = configureCopyDistributionsTask(project, distributionsDir);
-        TaskProvider<Copy> copyUpgradeTask = configureCopyUpgradeTask(project, upgradeVersion, upgradeDir);
-        TaskProvider<Copy> copyPluginsTask = configureCopyPluginsTask(project, pluginsDir);
-
+        Map<ElasticsearchDistribution.Type, TaskProvider<?>> lifecycleTasks = lifecycleTasks(project, "destructiveDistroTest");
+        Map<String, TaskProvider<?>> versionTasks = versionTasks(project, "destructiveDistroUpgradeTest");
         TaskProvider<Task> destructiveDistroTest = project.getTasks().register("destructiveDistroTest");
-        for (ElasticsearchDistribution distribution : distributions) {
-            if (distribution.getType() != Type.DOCKER || runDockerTests == true) {
-                TaskProvider<?> destructiveTask = configureDistroTest(project, distribution);
-                destructiveDistroTest.configure(t -> t.dependsOn(destructiveTask));
+
+        Configuration examplePlugin = configureExamplePlugin(project);
+
+        List<TaskProvider<Test>> windowsTestTasks = new ArrayList<>();
+        Map<Type, List<TaskProvider<Test>>> linuxTestTasks = new HashMap<>();
+        Map<String, List<TaskProvider<Test>>> upgradeTestTasks = new HashMap<>();
+        Map<String, TaskProvider<?>> depsTasks = new HashMap<>();
+        for (ElasticsearchDistribution distribution : testDistributions) {
+            String taskname = destructiveDistroTestTaskName(distribution);
+            TaskProvider<?> depsTask = project.getTasks().register(taskname + "#deps");
+            depsTask.configure(t -> t.dependsOn(distribution, examplePlugin));
+            depsTasks.put(taskname, depsTask);
+            TaskProvider<Test> destructiveTask = configureTestTask(project, taskname, distribution, t -> {
+                t.onlyIf(t2 -> distribution.isDocker() == false || dockerSupport.get().getDockerAvailability().isAvailable);
+                addDistributionSysprop(t, DISTRIBUTION_SYSPROP, distribution::getFilepath);
+                addDistributionSysprop(t, EXAMPLE_PLUGIN_SYSPROP, () -> examplePlugin.getSingleFile().toString());
+                t.exclude("**/PackageUpgradeTests.class");
+            }, depsTask);
+
+            if (distribution.getPlatform() == Platform.WINDOWS) {
+                windowsTestTasks.add(destructiveTask);
+            } else {
+                linuxTestTasks.computeIfAbsent(distribution.getType(), k -> new ArrayList<>()).add(destructiveTask);
+            }
+            destructiveDistroTest.configure(t -> t.dependsOn(destructiveTask));
+            lifecycleTasks.get(distribution.getType()).configure(t -> t.dependsOn(destructiveTask));
+
+            if ((distribution.getType() == Type.DEB || distribution.getType() == Type.RPM) && distribution.getBundledJdk()) {
+                for (Version version : BuildParams.getBwcVersions().getIndexCompatible()) {
+                    if (distribution.getFlavor() == Flavor.OSS && version.before("6.3.0")) {
+                        continue; // before opening xpack
+                    }
+                    final ElasticsearchDistribution bwcDistro;
+                    if (version.equals(Version.fromString(distribution.getVersion()))) {
+                        // this is the same as the distribution we are testing
+                        bwcDistro = distribution;
+                    } else {
+                        bwcDistro = createDistro(
+                            allDistributions,
+                            distribution.getArchitecture(),
+                            distribution.getType(),
+                            distribution.getPlatform(),
+                            distribution.getFlavor(),
+                            distribution.getBundledJdk(),
+                            version.toString()
+                        );
+
+                    }
+                    String upgradeTaskname = destructiveDistroUpgradeTestTaskName(distribution, version.toString());
+                    TaskProvider<?> upgradeDepsTask = project.getTasks().register(upgradeTaskname + "#deps");
+                    upgradeDepsTask.configure(t -> t.dependsOn(distribution, bwcDistro));
+                    depsTasks.put(upgradeTaskname, upgradeDepsTask);
+                    TaskProvider<Test> upgradeTest = configureTestTask(project, upgradeTaskname, distribution, t -> {
+                        addDistributionSysprop(t, DISTRIBUTION_SYSPROP, distribution::getFilepath);
+                        addDistributionSysprop(t, BWC_DISTRIBUTION_SYSPROP, bwcDistro::getFilepath);
+                        t.include("**/PackageUpgradeTests.class");
+                    }, upgradeDepsTask);
+                    versionTasks.get(version.toString()).configure(t -> t.dependsOn(upgradeTest));
+                    upgradeTestTasks.computeIfAbsent(version.toString(), k -> new ArrayList<>()).add(upgradeTest);
+                }
             }
         }
-        Map<String, TaskProvider<?>> batsTests = new HashMap<>();
-        batsTests.put("bats oss", configureBatsTest(project, "oss", distributionsDir, copyDistributionsTask));
-        configureBatsTest(project, "plugins", distributionsDir, copyDistributionsTask, copyPluginsTask).configure(
-            t -> t.setPluginsDir(pluginsDir)
-        );
-        configureBatsTest(project, "upgrade", distributionsDir, copyDistributionsTask, copyUpgradeTask).configure(
-            t -> t.setUpgradeDir(upgradeDir)
-        );
+
+        // setup jdks used by no-jdk tests, and by gradle executing
+        TaskProvider<Copy> linuxGradleJdk = createJdk(project, "gradle", GRADLE_JDK_VENDOR, GRADLE_JDK_VERSION, "linux", "x64");
+        TaskProvider<Copy> linuxSystemJdk = createJdk(project, "system", SYSTEM_JDK_VENDOR, SYSTEM_JDK_VERSION, "linux", "x64");
+        TaskProvider<Copy> windowsGradleJdk = createJdk(project, "gradle", GRADLE_JDK_VENDOR, GRADLE_JDK_VERSION, "windows", "x64");
+        TaskProvider<Copy> windowsSystemJdk = createJdk(project, "system", SYSTEM_JDK_VENDOR, SYSTEM_JDK_VERSION, "windows", "x64");
 
         project.subprojects(vmProject -> {
             vmProject.getPluginManager().apply(VagrantBasePlugin.class);
-            vmProject.getPluginManager().apply(JdkDownloadPlugin.class);
-            List<Object> vmDependencies = new ArrayList<>(configureVM(vmProject));
-            vmDependencies.add(project.getConfigurations().getByName("testRuntimeClasspath"));
+            TaskProvider<Copy> gradleJdk = isWindows(vmProject) ? windowsGradleJdk : linuxGradleJdk;
+            TaskProvider<Copy> systemJdk = isWindows(vmProject) ? windowsSystemJdk : linuxSystemJdk;
+            configureVM(vmProject, gradleJdk, systemJdk);
+            List<Object> vmDependencies = Arrays.asList(
+                gradleJdk,
+                systemJdk,
+                project.getConfigurations().getByName("testRuntimeClasspath")
+            );
 
+            Map<ElasticsearchDistribution.Type, TaskProvider<?>> vmLifecyleTasks = lifecycleTasks(vmProject, "distroTest");
+            Map<String, TaskProvider<?>> vmVersionTasks = versionTasks(vmProject, "distroUpgradeTest");
             TaskProvider<Task> distroTest = vmProject.getTasks().register("distroTest");
-            for (ElasticsearchDistribution distribution : distributions) {
-                String destructiveTaskName = destructiveDistroTestTaskName(distribution);
-                Platform platform = distribution.getPlatform();
-                // this condition ensures windows boxes get windows distributions, and linux boxes get linux distributions
-                if (isWindows(vmProject) == (platform == Platform.WINDOWS)) {
-                    TaskProvider<GradleDistroTestTask> vmTask = configureVMWrapperTask(
-                        vmProject,
-                        distribution.getName() + " distribution",
-                        destructiveTaskName,
-                        vmDependencies
-                    );
-                    vmTask.configure(t -> t.dependsOn(distribution));
 
-                    distroTest.configure(t -> {
+            // windows boxes get windows distributions, and linux boxes get linux distributions
+            if (isWindows(vmProject)) {
+                configureVMWrapperTasks(
+                    vmProject,
+                    windowsTestTasks,
+                    depsTasks,
+                    wrapperTask -> { vmLifecyleTasks.get(Type.ARCHIVE).configure(t -> t.dependsOn(wrapperTask)); },
+                    vmDependencies
+                );
+            } else {
+                for (var entry : linuxTestTasks.entrySet()) {
+                    Type type = entry.getKey();
+                    TaskProvider<?> vmLifecycleTask = vmLifecyleTasks.get(type);
+                    configureVMWrapperTasks(vmProject, entry.getValue(), depsTasks, wrapperTask -> {
+                        vmLifecycleTask.configure(t -> t.dependsOn(wrapperTask));
+
                         // Only VM sub-projects that are specifically opted-in to testing Docker should
                         // have the Docker task added as a dependency. Although we control whether Docker
                         // is installed in the VM via `Vagrantfile` and we could auto-detect its presence
@@ -152,298 +206,251 @@ public class DistroTestPlugin implements Plugin<Project> {
                         // auto-detection doesn't work.
                         //
                         // The shouldTestDocker property could be null, hence we use Boolean.TRUE.equals()
-                        boolean shouldExecute = distribution.getType() != Type.DOCKER
-                            || Boolean.TRUE.equals(vmProject.findProperty("shouldTestDocker")) == true;
+                        boolean shouldExecute = (type != Type.DOCKER && type != Type.DOCKER_UBI)
+                            || Boolean.TRUE.equals(vmProject.findProperty("shouldTestDocker"));
 
                         if (shouldExecute) {
-                            t.dependsOn(vmTask);
+                            distroTest.configure(t -> t.dependsOn(wrapperTask));
                         }
-                    });
+                    }, vmDependencies);
+                }
+
+                for (var entry : upgradeTestTasks.entrySet()) {
+                    String version = entry.getKey();
+                    TaskProvider<?> vmVersionTask = vmVersionTasks.get(version);
+                    configureVMWrapperTasks(
+                        vmProject,
+                        entry.getValue(),
+                        depsTasks,
+                        wrapperTask -> { vmVersionTask.configure(t -> t.dependsOn(wrapperTask)); },
+                        vmDependencies
+                    );
                 }
             }
-
-            batsTests.forEach((desc, task) -> {
-                configureVMWrapperTask(vmProject, desc, task.getName(), vmDependencies).configure(t -> {
-                    t.setProgressHandler(new BatsProgressLogger(project.getLogger()));
-                    t.onlyIf(spec -> isWindows(vmProject) == false); // bats doesn't run on windows
-                    t.dependsOn(copyDistributionsTask);
-                });
-            });
         });
     }
 
-    private static Jdk createJdk(
-        NamedDomainObjectContainer<Jdk> jdksContainer,
-        String name,
+    private static Map<ElasticsearchDistribution.Type, TaskProvider<?>> lifecycleTasks(Project project, String taskPrefix) {
+        Map<ElasticsearchDistribution.Type, TaskProvider<?>> lifecyleTasks = new HashMap<>();
+
+        lifecyleTasks.put(Type.DOCKER, project.getTasks().register(taskPrefix + ".docker"));
+        lifecyleTasks.put(Type.DOCKER_UBI, project.getTasks().register(taskPrefix + ".ubi"));
+        lifecyleTasks.put(Type.ARCHIVE, project.getTasks().register(taskPrefix + ".archives"));
+        lifecyleTasks.put(Type.DEB, project.getTasks().register(taskPrefix + ".packages"));
+        lifecyleTasks.put(Type.RPM, lifecyleTasks.get(Type.DEB));
+
+        return lifecyleTasks;
+    }
+
+    private static Map<String, TaskProvider<?>> versionTasks(Project project, String taskPrefix) {
+        Map<String, TaskProvider<?>> versionTasks = new HashMap<>();
+
+        for (Version version : BuildParams.getBwcVersions().getIndexCompatible()) {
+            versionTasks.put(version.toString(), project.getTasks().register(taskPrefix + ".v" + version));
+        }
+
+        return versionTasks;
+    }
+
+    private static TaskProvider<Copy> createJdk(
+        Project project,
+        String purpose,
         String vendor,
         String version,
-        String platform
+        String platform,
+        String architecture
     ) {
-        Jdk jdk = jdksContainer.create(name);
+        Jdk jdk = JdkDownloadPlugin.getContainer(project).create(platform + "-" + purpose);
         jdk.setVendor(vendor);
         jdk.setVersion(version);
         jdk.setPlatform(platform);
-        return jdk;
+        jdk.setArchitecture(architecture);
+
+        String taskname = "copy" + Util.capitalize(platform) + Util.capitalize(purpose) + "Jdk";
+        TaskProvider<Copy> copyTask = project.getTasks().register(taskname, Copy.class);
+        copyTask.configure(t -> {
+            t.from(jdk);
+            t.into(new File(project.getBuildDir(), "jdks/" + platform + "-" + architecture + "-" + vendor + "-" + version));
+        });
+        return copyTask;
     }
 
-    private static Version getUpgradeVersion(Project project) {
-        String upgradeFromVersionRaw = System.getProperty("tests.packaging.upgradeVersion");
-        if (upgradeFromVersionRaw != null) {
-            return Version.fromString(upgradeFromVersionRaw);
-        }
-
-        // was not passed in, so randomly choose one from bwc versions
-        ExtraPropertiesExtension extraProperties = project.getExtensions().getByType(ExtraPropertiesExtension.class);
-
-        if ((boolean) extraProperties.get("bwc_tests_enabled") == false) {
-            // Upgrade tests will go from current to current when the BWC tests are disabled to skip real BWC tests
-            return Version.fromString(project.getVersion().toString());
-        }
-
-        String firstPartOfSeed = BuildParams.getTestSeed().split(":")[0];
-        final long seed = Long.parseUnsignedLong(firstPartOfSeed, 16);
-        BwcVersions bwcVersions = (BwcVersions) extraProperties.get("bwcVersions");
-        final List<Version> indexCompatVersions = bwcVersions.getIndexCompatible();
-        return indexCompatVersions.get(new Random(seed).nextInt(indexCompatVersions.size()));
-    }
-
-    private static List<Object> configureVM(Project project) {
+    private static void configureVM(Project project, TaskProvider<Copy> gradleJdkProvider, TaskProvider<Copy> systemJdkProvider) {
         String box = project.getName();
-
-        // setup jdks used by the distro tests, and by gradle executing
-
-        NamedDomainObjectContainer<Jdk> jdksContainer = JdkDownloadPlugin.getContainer(project);
-        String platform = box.contains("windows") ? "windows" : "linux";
-        Jdk systemJdk = createJdk(jdksContainer, "system", SYSTEM_JDK_VENDOR, SYSTEM_JDK_VERSION, platform);
-        Jdk gradleJdk = createJdk(jdksContainer, "gradle", GRADLE_JDK_VENDOR, GRADLE_JDK_VERSION, platform);
 
         // setup VM used by these tests
         VagrantExtension vagrant = project.getExtensions().getByType(VagrantExtension.class);
         vagrant.setBox(box);
-        vagrant.vmEnv("SYSTEM_JAVA_HOME", convertPath(project, vagrant, systemJdk, "", ""));
-        vagrant.vmEnv("PATH", convertPath(project, vagrant, gradleJdk, "/bin:$PATH", "\\bin;$Env:PATH"));
-        // pass these along to get correct build scans
+
+        vagrant.vmEnv("SYSTEM_JAVA_HOME", convertPath(project, vagrant, systemJdkProvider, "", ""));
+        // set java home for gradle to use. package tests will overwrite/remove this for each test case
+        vagrant.vmEnv("JAVA_HOME", convertPath(project, vagrant, gradleJdkProvider, "", ""));
         if (System.getenv("JENKINS_URL") != null) {
             Stream.of("JOB_NAME", "JENKINS_URL", "BUILD_NUMBER", "BUILD_URL").forEach(name -> vagrant.vmEnv(name, System.getenv(name)));
         }
         vagrant.setIsWindowsVM(isWindows(project));
-
-        return Arrays.asList(systemJdk, gradleJdk);
     }
 
-    private static Object convertPath(Project project, VagrantExtension vagrant, Jdk jdk, String additionaLinux, String additionalWindows) {
-        return new Object() {
-            @Override
-            public String toString() {
-                if (vagrant.isWindowsVM()) {
-                    return convertWindowsPath(project, jdk.getPath()) + additionalWindows;
-                }
-                return convertLinuxPath(project, jdk.getPath()) + additionaLinux;
-            }
-        };
-    }
-
-    private static TaskProvider<Copy> configureCopyDistributionsTask(Project project, Provider<Directory> distributionsDir) {
-
-        // temporary, until we have tasks per distribution
-        return project.getTasks().register(COPY_DISTRIBUTIONS_TASK, Copy.class, t -> {
-            t.into(distributionsDir);
-            t.from(project.getConfigurations().getByName(DISTRIBUTIONS_CONFIGURATION));
-
-            Path distributionsPath = distributionsDir.get().getAsFile().toPath();
-            TaskInputs inputs = t.getInputs();
-            inputs.property("version", VersionProperties.getElasticsearch());
-            t.doLast(action -> {
-                try {
-                    Files.writeString(distributionsPath.resolve("version"), VersionProperties.getElasticsearch());
-                } catch (IOException e) {
-                    throw new UncheckedIOException(e);
-                }
-            });
-        });
-    }
-
-    private static TaskProvider<Copy> configureCopyUpgradeTask(Project project, Version upgradeVersion, Provider<Directory> upgradeDir) {
-        // temporary, until we have tasks per distribution
-        return project.getTasks().register(COPY_UPGRADE_TASK, Copy.class, t -> {
-            t.into(upgradeDir);
-            t.from(project.getConfigurations().getByName(UPGRADE_CONFIGURATION));
-
-            Path upgradePath = upgradeDir.get().getAsFile().toPath();
-
-            // write bwc version, and append -SNAPSHOT if it is an unreleased version
-            ExtraPropertiesExtension extraProperties = project.getExtensions().getByType(ExtraPropertiesExtension.class);
-            BwcVersions bwcVersions = (BwcVersions) extraProperties.get("bwcVersions");
-            final String upgradeFromVersion;
-            if (bwcVersions.unreleasedInfo(upgradeVersion) != null) {
-                upgradeFromVersion = upgradeVersion.toString() + "-SNAPSHOT";
-            } else {
-                upgradeFromVersion = upgradeVersion.toString();
-            }
-            TaskInputs inputs = t.getInputs();
-            inputs.property("upgrade_from_version", upgradeFromVersion);
-            // TODO: this is serializable, need to think how to represent this as an input
-            // inputs.property("bwc_versions", bwcVersions);
-            t.doLast(action -> {
-                try {
-                    Files.writeString(upgradePath.resolve("upgrade_from_version"), upgradeFromVersion);
-                    // this is always true, but bats tests rely on it. It is just temporary until bats is removed.
-                    Files.writeString(upgradePath.resolve("upgrade_is_oss"), "");
-                } catch (IOException e) {
-                    throw new UncheckedIOException(e);
-                }
-            });
-        });
-    }
-
-    private static TaskProvider<Copy> configureCopyPluginsTask(Project project, Provider<Directory> pluginsDir) {
-        Configuration pluginsConfiguration = project.getConfigurations().create(PLUGINS_CONFIGURATION);
-
-        // temporary, until we have tasks per distribution
-        return project.getTasks().register(COPY_PLUGINS_TASK, Copy.class, t -> {
-            t.into(pluginsDir);
-            t.from(pluginsConfiguration);
-        });
-    }
-
-    private static TaskProvider<GradleDistroTestTask> configureVMWrapperTask(
+    private static Object convertPath(
         Project project,
-        String type,
-        String destructiveTaskPath,
-        List<Object> dependsOn
+        VagrantExtension vagrant,
+        TaskProvider<Copy> jdkProvider,
+        String additionaLinux,
+        String additionalWindows
     ) {
-        int taskNameStart = destructiveTaskPath.lastIndexOf(':') + "destructive".length() + 1;
-        String taskname = destructiveTaskPath.substring(taskNameStart);
-        taskname = taskname.substring(0, 1).toLowerCase(Locale.ROOT) + taskname.substring(1);
-        return project.getTasks().register(taskname, GradleDistroTestTask.class, t -> {
-            t.setGroup(JavaBasePlugin.VERIFICATION_GROUP);
-            t.setDescription("Runs " + type + " tests within vagrant");
-            t.setTaskName(destructiveTaskPath);
-            t.extraArg("-D'" + IN_VM_SYSPROP + "'");
-            t.dependsOn(dependsOn);
-        });
-    }
-
-    private static TaskProvider<?> configureDistroTest(Project project, ElasticsearchDistribution distribution) {
-        return project.getTasks().register(destructiveDistroTestTaskName(distribution), Test.class, t -> {
-            t.setMaxParallelForks(1);
-            t.setWorkingDir(project.getProjectDir());
-            t.systemProperty(DISTRIBUTION_SYSPROP, distribution.toString());
-            if (System.getProperty(IN_VM_SYSPROP) == null) {
-                t.dependsOn(distribution);
+        return Util.toStringable(() -> {
+            String hostPath = jdkProvider.get().getDestinationDir().toString();
+            if (vagrant.isWindowsVM()) {
+                return convertWindowsPath(project, hostPath) + additionalWindows;
+            } else {
+                return convertLinuxPath(project, hostPath) + additionaLinux;
             }
         });
     }
 
-    private static TaskProvider<BatsTestTask> configureBatsTest(
+    private static Configuration configureExamplePlugin(Project project) {
+        Configuration examplePlugin = project.getConfigurations().create(EXAMPLE_PLUGIN_CONFIGURATION);
+        DependencyHandler deps = project.getDependencies();
+        Map<String, String> examplePluginProject = Map.of("path", ":example-plugins:custom-settings", "configuration", "zip");
+        deps.add(EXAMPLE_PLUGIN_CONFIGURATION, deps.project(examplePluginProject));
+        return examplePlugin;
+    }
+
+    private static void configureVMWrapperTasks(
         Project project,
-        String type,
-        Provider<Directory> distributionsDir,
+        List<TaskProvider<Test>> destructiveTasks,
+        Map<String, TaskProvider<?>> depsTasks,
+        Action<TaskProvider<GradleDistroTestTask>> configure,
+        Object... additionalDeps
+    ) {
+        for (TaskProvider<? extends Task> destructiveTask : destructiveTasks) {
+            String destructiveTaskName = destructiveTask.getName();
+            String taskname = destructiveTaskName.substring("destructive".length());
+            taskname = taskname.substring(0, 1).toLowerCase(Locale.ROOT) + taskname.substring(1);
+            TaskProvider<GradleDistroTestTask> vmTask = project.getTasks().register(taskname, GradleDistroTestTask.class, t -> {
+                t.setGroup(JavaBasePlugin.VERIFICATION_GROUP);
+                t.setDescription("Runs " + destructiveTaskName.split("\\.", 2)[1] + " tests within vagrant");
+                t.setTaskName(destructiveTaskName);
+                t.extraArg("-D'" + IN_VM_SYSPROP + "'");
+                t.dependsOn(depsTasks.get(destructiveTaskName));
+                t.dependsOn(additionalDeps);
+            });
+            configure.execute(vmTask);
+        }
+    }
+
+    private static TaskProvider<Test> configureTestTask(
+        Project project,
+        String taskname,
+        ElasticsearchDistribution distribution,
+        Action<? super Test> configure,
         Object... deps
     ) {
-        return project.getTasks().register("destructiveBatsTest." + type, BatsTestTask.class, t -> {
-            Directory batsDir = project.getLayout().getProjectDirectory().dir("bats");
-            t.setTestsDir(batsDir.dir(type));
-            t.setUtilsDir(batsDir.dir("utils"));
-            t.setDistributionsDir(distributionsDir);
-            t.setPackageName("elasticsearch" + (type.equals("oss") ? "-oss" : ""));
+        return project.getTasks().register(taskname, Test.class, t -> {
+            // Only run tests for the current architecture
+            t.onlyIf(t3 -> distribution.getArchitecture() == Architecture.current());
+            t.getOutputs().doNotCacheIf("Build cache is disabled for packaging tests", Specs.satisfyAll());
+            t.setMaxParallelForks(1);
+            t.setWorkingDir(project.getProjectDir());
             if (System.getProperty(IN_VM_SYSPROP) == null) {
                 t.dependsOn(deps);
             }
+            configure.execute(t);
         });
     }
 
-    private List<ElasticsearchDistribution> configureDistributions(Project project, Version upgradeVersion, boolean runDockerTests) {
+    private List<ElasticsearchDistribution> configureDistributions(Project project) {
         NamedDomainObjectContainer<ElasticsearchDistribution> distributions = DistributionDownloadPlugin.getContainer(project);
         List<ElasticsearchDistribution> currentDistros = new ArrayList<>();
-        List<ElasticsearchDistribution> upgradeDistros = new ArrayList<>();
 
-        for (Type type : List.of(Type.DEB, Type.RPM, Type.DOCKER)) {
-            for (Flavor flavor : Flavor.values()) {
-                for (boolean bundledJdk : Arrays.asList(true, false)) {
-                    // All our Docker images include a bundled JDK so it doesn't make sense to test without one
-                    boolean skip = type == Type.DOCKER && (runDockerTests == false || bundledJdk == false);
+        for (Architecture architecture : Architecture.values()) {
+            for (Type type : List.of(Type.DEB, Type.RPM, Type.DOCKER, Type.DOCKER_UBI)) {
+                for (Flavor flavor : Flavor.values()) {
+                    for (boolean bundledJdk : Arrays.asList(true, false)) {
+                        if (bundledJdk == false) {
+                            // We'll never publish an ARM (aarch64) build without a bundled JDK.
+                            if (architecture == Architecture.AARCH64) {
+                                continue;
+                            }
+                            // All our Docker images include a bundled JDK so it doesn't make sense to test without one.
+                            if (type == Type.DOCKER || type == Type.DOCKER_UBI) {
+                                continue;
+                            }
+                        }
 
-                    if (skip == false) {
-                        addDistro(distributions, type, null, flavor, bundledJdk, VersionProperties.getElasticsearch(), currentDistros);
+                        // We don't publish the OSS distribution on UBI
+                        if (type == Type.DOCKER_UBI && flavor == Flavor.OSS) {
+                            continue;
+                        }
+
+                        currentDistros.add(
+                            createDistro(distributions, architecture, type, null, flavor, bundledJdk, VersionProperties.getElasticsearch())
+                        );
                     }
                 }
             }
+        }
 
-            // We don't configure distributions for prior versions for Docker. This is because doing
-            // so prompts Gradle to try and resolve the Docker dependencies, which doesn't work as
-            // they can't be downloaded via Ivy (configured in DistributionDownloadPlugin). Since we
-            // need these for the BATS upgrade tests, and those tests only cover .rpm and .deb, it's
-            // OK to omit creating such distributions in the first place. We may need to revisit
-            // this in the future, so allow upgrade testing using Docker containers.
-            if (type != Type.DOCKER) {
-                // upgrade version is always bundled jdk
-                // NOTE: this is mimicking the old VagrantTestPlugin upgrade behavior. It will eventually be replaced
-                // witha dedicated upgrade test from every bwc version like other bwc tests
-                addDistro(distributions, type, null, Flavor.DEFAULT, true, upgradeVersion.toString(), upgradeDistros);
-                if (upgradeVersion.onOrAfter("6.3.0")) {
-                    addDistro(distributions, type, null, Flavor.OSS, true, upgradeVersion.toString(), upgradeDistros);
+        for (Architecture architecture : Architecture.values()) {
+            for (Platform platform : Arrays.asList(Platform.LINUX, Platform.WINDOWS)) {
+                for (Flavor flavor : Flavor.values()) {
+                    for (boolean bundledJdk : Arrays.asList(true, false)) {
+                        if (bundledJdk == false && architecture != Architecture.X64) {
+                            // We will never publish distributions for non-x86 (amd64) platforms
+                            // without a bundled JDK
+                            continue;
+                        }
+
+                        currentDistros.add(
+                            createDistro(
+                                distributions,
+                                architecture,
+                                Type.ARCHIVE,
+                                platform,
+                                flavor,
+                                bundledJdk,
+                                VersionProperties.getElasticsearch()
+                            )
+                        );
+                    }
                 }
             }
         }
-
-        for (Platform platform : Arrays.asList(Platform.LINUX, Platform.WINDOWS)) {
-            for (Flavor flavor : Flavor.values()) {
-                for (boolean bundledJdk : Arrays.asList(true, false)) {
-                    addDistro(
-                        distributions,
-                        Type.ARCHIVE,
-                        platform,
-                        flavor,
-                        bundledJdk,
-                        VersionProperties.getElasticsearch(),
-                        currentDistros
-                    );
-                }
-            }
-        }
-
-        // temporary until distro tests have one test per distro
-        Configuration packagingConfig = project.getConfigurations().create(DISTRIBUTIONS_CONFIGURATION);
-        List<Configuration> distroConfigs = currentDistros.stream()
-            .filter(d -> d.getType() != Type.DOCKER)
-            .map(ElasticsearchDistribution::getConfiguration)
-            .collect(Collectors.toList());
-        packagingConfig.setExtendsFrom(distroConfigs);
-
-        Configuration packagingUpgradeConfig = project.getConfigurations().create(UPGRADE_CONFIGURATION);
-        List<Configuration> distroUpgradeConfigs = upgradeDistros.stream()
-            .map(ElasticsearchDistribution::getConfiguration)
-            .collect(Collectors.toList());
-        packagingUpgradeConfig.setExtendsFrom(distroUpgradeConfigs);
 
         return currentDistros;
     }
 
-    private static void addDistro(
+    private static ElasticsearchDistribution createDistro(
         NamedDomainObjectContainer<ElasticsearchDistribution> distributions,
+        Architecture architecture,
         Type type,
         Platform platform,
         Flavor flavor,
         boolean bundledJdk,
-        String version,
-        List<ElasticsearchDistribution> container
+        String version
     ) {
-
-        String name = distroId(type, platform, flavor, bundledJdk) + "-" + version;
-        if (distributions.findByName(name) != null) {
-            return;
-        }
+        String name = distroId(type, platform, flavor, bundledJdk, architecture) + "-" + version;
+        boolean isDocker = type == Type.DOCKER || type == Type.DOCKER_UBI;
         ElasticsearchDistribution distro = distributions.create(name, d -> {
+            d.setArchitecture(architecture);
             d.setFlavor(flavor);
             d.setType(type);
             if (type == Type.ARCHIVE) {
                 d.setPlatform(platform);
             }
-            d.setBundledJdk(bundledJdk);
+            if (isDocker == false) {
+                d.setBundledJdk(bundledJdk);
+            }
             d.setVersion(version);
         });
-        container.add(distro);
+
+        // Allow us to gracefully omit building Docker distributions if Docker is not available on the system.
+        // In such a case as we can't build the Docker images we'll simply skip the corresponding tests.
+        if (isDocker) {
+            distro.setFailIfUnavailable(false);
+        }
+
+        return distro;
     }
 
     // return true if the project is for a windows VM, false otherwise
@@ -451,106 +458,31 @@ public class DistroTestPlugin implements Plugin<Project> {
         return project.getName().contains("windows");
     }
 
-    private static String distroId(Type type, Platform platform, Flavor flavor, boolean bundledJdk) {
-        return flavor + "-" + (type == Type.ARCHIVE ? platform + "-" : "") + type + (bundledJdk ? "" : "-no-jdk");
+    private static String distroId(Type type, Platform platform, Flavor flavor, boolean bundledJdk, Architecture architecture) {
+        return flavor
+            + "-"
+            + (type == Type.ARCHIVE ? platform + "-" : "")
+            + type
+            + (bundledJdk ? "" : "-no-jdk")
+            + (architecture == Architecture.X64 ? "" : "-" + architecture.toString().toLowerCase());
     }
 
     private static String destructiveDistroTestTaskName(ElasticsearchDistribution distro) {
         Type type = distro.getType();
-        return "destructiveDistroTest." + distroId(type, distro.getPlatform(), distro.getFlavor(), distro.getBundledJdk());
+        return "destructiveDistroTest."
+            + distroId(type, distro.getPlatform(), distro.getFlavor(), distro.getBundledJdk(), distro.getArchitecture());
     }
 
-    static Map<String, String> parseOsRelease(final List<String> osReleaseLines) {
-        final Map<String, String> values = new HashMap<>();
-
-        osReleaseLines.stream().map(String::trim).filter(line -> (line.isEmpty() || line.startsWith("#")) == false).forEach(line -> {
-            final String[] parts = line.split("=", 2);
-            final String key = parts[0];
-            // remove optional leading and trailing quotes and whitespace
-            final String value = parts[1].replaceAll("^['\"]?\\s*", "").replaceAll("\\s*['\"]?$", "");
-
-            values.put(key, value);
-        });
-
-        return values;
+    private static String destructiveDistroUpgradeTestTaskName(ElasticsearchDistribution distro, String bwcVersion) {
+        Type type = distro.getType();
+        return "destructiveDistroUpgradeTest.v"
+            + bwcVersion
+            + "."
+            + distroId(type, distro.getPlatform(), distro.getFlavor(), distro.getBundledJdk(), distro.getArchitecture());
     }
 
-    static String deriveId(final Map<String, String> osRelease) {
-        return osRelease.get("ID") + "-" + osRelease.get("VERSION_ID");
-    }
-
-    private static List<String> getLinuxExclusionList(Project project) {
-        final String exclusionsFilename = "dockerOnLinuxExclusions";
-        final Path exclusionsPath = project.getRootDir().toPath().resolve(Path.of(".ci", exclusionsFilename));
-
-        try {
-            return Files.readAllLines(exclusionsPath)
-                .stream()
-                .map(String::trim)
-                .filter(line -> (line.isEmpty() || line.startsWith("#")) == false)
-                .collect(Collectors.toList());
-        } catch (IOException e) {
-            throw new GradleException("Failed to read .ci/" + exclusionsFilename, e);
-        }
-    }
-
-    /**
-     * The {@link DistroTestPlugin} generates a number of test tasks, some
-     * of which are Docker packaging tests. When running on the host OS or in CI
-     * i.e. not in a Vagrant VM, only certain operating systems are supported. This
-     * method determines whether the Docker tests should be run on the host
-     * OS. Essentially, unless an OS and version is specifically excluded, we expect
-     * to be able to run Docker and test the Docker images.
-     */
-    private static boolean shouldRunDockerTests(Project project) {
-        switch (OS.current()) {
-            case WINDOWS:
-                // Not yet supported.
-                return false;
-
-            case MAC:
-                // Assume that Docker for Mac is installed, since Docker is part of the dev workflow.
-                return true;
-
-            case LINUX:
-                // We don't attempt to check the current flavor and version of Linux unless we're
-                // running in CI, because we don't want to stop people running the Docker tests in
-                // their own environments if they really want to.
-                if (BuildParams.isCi() == false) {
-                    return true;
-                }
-
-                // Only some hosts in CI are configured with Docker. We attempt to work out the OS
-                // and version, so that we know whether to expect to find Docker. We don't attempt
-                // to probe for whether Docker is available, because that doesn't tell us whether
-                // Docker is unavailable when it should be.
-                final Path osRelease = Paths.get("/etc/os-release");
-
-                if (Files.exists(osRelease)) {
-                    Map<String, String> values;
-
-                    try {
-                        final List<String> osReleaseLines = Files.readAllLines(osRelease);
-                        values = parseOsRelease(osReleaseLines);
-                    } catch (IOException e) {
-                        throw new GradleException("Failed to read /etc/os-release", e);
-                    }
-
-                    final String id = deriveId(values);
-
-                    final boolean shouldExclude = getLinuxExclusionList(project).contains(id);
-
-                    logger.warn("Linux OS id [" + id + "] is " + (shouldExclude ? "" : "not ") + "present in the Docker exclude list");
-
-                    return shouldExclude == false;
-                }
-
-                logger.warn("/etc/os-release does not exist!");
-                return false;
-
-            default:
-                logger.warn("Unknown OS [" + OS.current() + "], answering false to shouldRunDockerTests()");
-                return false;
-        }
+    private static void addDistributionSysprop(Test task, String sysprop, Supplier<String> valueSupplier) {
+        SystemPropertyCommandLineArgumentProvider props = task.getExtensions().getByType(SystemPropertyCommandLineArgumentProvider.class);
+        props.systemProperty(sysprop, valueSupplier);
     }
 }
